--- a/angularAssignments/src/app/home/home.component.html
+++ b/angularAssignments/src/app/home/home.component.html
@@ -3,3 +3,4 @@
 </p>
 
 <a [routerLink]="['/','students']">Students</a>
+<p><a [routerLink]="['/','myform']">Click to go to angular assignment 4 (Form Assignment)</a></p>
